[workspace]
members = [
    "crates/ample",
    "crates/userspace",
    "crates/kernelspace",
    "crates/userspace_build"
]

[[bin]]
name = "userspace_hub"
path = "src/entry.rs"

[package]
name = "userspace_hub"
version = "0.1.0"
edition = "2024"

[dependencies]
ample = { path = "crates/ample" }
userspace = { path = "crates/userspace", features = ["no_std"] }
kernelspace = { path = "crates/kernelspace" }

[build-dependencies]
cc = "1.0"
userspace_build = { path = "crates/userspace_build", features = ["with_std"] }
